fix: correct build folder and deploy script

--- a/index.html
+++ b/index.html
@@ -26,28 +26,11 @@
     <link rel="icon" href="/favicon.ico?22" type="image/x-icon" sizes="any" />
 
     <title>MaxLine</title>
-    <style>
-      #root {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-      .loading {
-        font-family: Arial, sans-serif;
-        text-align: center;
-      }
-    </style>
   </head>
 
   <body>
-    <div id="root">
-      <div class="loading">
-        <h1>Loading...</h1>
-        <p>If you see this message for more than 5 seconds, check the console for errors.</p>
-      </div>
-    </div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root"></div>
+
     <noscript
       ><img
         alt="noscript"
