--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta content="width" name="MobileOptimized" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="robots" content="index, follow" />
+    <meta property="og:image" content="/favicon.ico?22" />
     <meta property="og:type" content="Website" />
     <meta property="og:title" content="online casino" />
     <meta property="og:description" content="online casino" />
@@ -23,7 +24,11 @@
     <meta property="title" content="online casino" />
     <meta name="resource-type" content="document" />
     <meta name="theme-color" content="#09090b" />
+
     <link rel="icon" href="/favicon.ico?22" type="image/x-icon" sizes="any" />
+    <link rel="preload" as="image" href="/src/shared/assets/main-bg.png" />
+    <link rel="preload" as="image" href="/src/shared/assets/flame.gif" />
+    <link rel="preload" as="image" href="/src/shared/assets/bonus-bg.webp" />
 
     <title>MaxLine</title>
   </head>
